lowercase ketika input

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tebak-tebakan suit</title>
     <style>
+      *{
+        margin= 0;
+        padding= 0;
+      }
       #container{
         display: flex;
-        width: 75%;
+        width: 100%;
         box-sizing: border;
         justify-content: center;
         flex-wrap: wrap;
